--- a/src/launch-hadoop-16435.ipynb
+++ b/src/launch-hadoop-16435.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -30,12 +30,12 @@
     },
     {
      "ename": "BadRequest",
-     "evalue": "Invalid input for field 'identity/token/id': None is not of type 'string'\n\nFailed validating 'type' in schema['properties']['identity']['properties']['token']['properties']['id']:\n    {'type': 'string'}\n\nOn instance['identity']['token']['id']:\n    None (HTTP 400) (Request-ID: req-d0328c3b-3ce9-427b-9f0b-8770704be502)",
+     "evalue": "Invalid input for field 'identity/token/id': None is not of type 'string'\n\nFailed validating 'type' in schema['properties']['identity']['properties']['token']['properties']['id']:\n    {'type': 'string'}\n\nOn instance['identity']['token']['id']:\n    None (HTTP 400) (Request-ID: req-a3969944-ebf5-451b-b5a2-5e9d80c43b25)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mBadRequest\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m reservations \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     19\u001b[0m add_node_reservation(reservations, count\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, node_type\u001b[38;5;241m=\u001b[39mnode_type)\n\u001b[0;32m---> 20\u001b[0m \u001b[43madd_fip_reservation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreservations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcount\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Create the lease\u001b[39;00m\n\u001b[1;32m     23\u001b[0m lease \u001b[38;5;241m=\u001b[39m create_lease(LEASE_NAME, reservations, start_date\u001b[38;5;241m=\u001b[39mstart_date,\n\u001b[1;32m     24\u001b[0m                      end_date\u001b[38;5;241m=\u001b[39mend_date)\n",
+      "Cell \u001b[0;32mIn[10], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m reservations \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     19\u001b[0m add_node_reservation(reservations, count\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, node_type\u001b[38;5;241m=\u001b[39mnode_type)\n\u001b[0;32m---> 20\u001b[0m \u001b[43madd_fip_reservation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreservations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcount\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Create the lease\u001b[39;00m\n\u001b[1;32m     23\u001b[0m lease \u001b[38;5;241m=\u001b[39m create_lease(LEASE_NAME, reservations, start_date\u001b[38;5;241m=\u001b[39mstart_date,\n\u001b[1;32m     24\u001b[0m                      end_date\u001b[38;5;241m=\u001b[39mend_date)\n",
       "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/chi/lease.py:618\u001b[0m, in \u001b[0;36madd_fip_reservation\u001b[0;34m(reservation_list, count)\u001b[0m\n\u001b[1;32m    607\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_fip_reservation\u001b[39m(reservation_list, count\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m    608\u001b[0m     \u001b[38;5;124;03m\"\"\"Add a floating IP reservation to a reservation list.\u001b[39;00m\n\u001b[1;32m    609\u001b[0m \n\u001b[1;32m    610\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    613\u001b[0m \u001b[38;5;124;03m        count (int): The number of floating IPs to reserve.\u001b[39;00m\n\u001b[1;32m    614\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    615\u001b[0m     reservation_list\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m    616\u001b[0m         {\n\u001b[1;32m    617\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresource_type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvirtual:floatingip\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m--> 618\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnetwork_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mget_network_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPUBLIC_NETWORK\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[1;32m    619\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mamount\u001b[39m\u001b[38;5;124m\"\u001b[39m: count,\n\u001b[1;32m    620\u001b[0m         }\n\u001b[1;32m    621\u001b[0m     )\n",
       "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/chi/network.py:120\u001b[0m, in \u001b[0;36mget_network_id\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_network_id\u001b[39m(name) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m    108\u001b[0m     \u001b[38;5;124;03m\"\"\"Look up a network's ID from its name.\u001b[39;00m\n\u001b[1;32m    109\u001b[0m \n\u001b[1;32m    110\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;124;03m            were returned for the search term.\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 120\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_resolve_id\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnetworks\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/chi/network.py:64\u001b[0m, in \u001b[0;36m_resolve_id\u001b[0;34m(resource, name)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m callable(list_fn):\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInvalid resource type \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     63\u001b[0m resources \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m---> 64\u001b[0m     x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlist_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m[resource]\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m x[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m name\n\u001b[1;32m     66\u001b[0m ]\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m resources:\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresource\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m found with name \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
@@ -57,7 +57,7 @@
       "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/keystoneauth1/identity/v3/base.py:185\u001b[0m, in \u001b[0;36mAuth.get_auth_ref\u001b[0;34m(self, session, **kwargs)\u001b[0m\n\u001b[1;32m    182\u001b[0m     token_url \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m?nocatalog\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    184\u001b[0m _logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaking authentication request to \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m, token_url)\n\u001b[0;32m--> 185\u001b[0m resp \u001b[38;5;241m=\u001b[39m \u001b[43msession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpost\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoken_url\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjson\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbody\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheaders\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mheaders\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    186\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mauthenticated\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlog\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    188\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    189\u001b[0m     _logger\u001b[38;5;241m.\u001b[39mdebug(json\u001b[38;5;241m.\u001b[39mdumps(resp\u001b[38;5;241m.\u001b[39mjson()))\n",
       "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/keystoneauth1/session.py:1162\u001b[0m, in \u001b[0;36mSession.post\u001b[0;34m(self, url, **kwargs)\u001b[0m\n\u001b[1;32m   1156\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpost\u001b[39m(\u001b[38;5;28mself\u001b[39m, url, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m   1157\u001b[0m     \u001b[38;5;124;03m\"\"\"Perform a POST request.\u001b[39;00m\n\u001b[1;32m   1158\u001b[0m \n\u001b[1;32m   1159\u001b[0m \u001b[38;5;124;03m    This calls :py:meth:`.request()` with ``method`` set to ``POST``.\u001b[39;00m\n\u001b[1;32m   1160\u001b[0m \n\u001b[1;32m   1161\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1162\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrequest\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPOST\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/keystoneauth1/session.py:985\u001b[0m, in \u001b[0;36mSession.request\u001b[0;34m(self, url, method, json, original_ip, user_agent, redirect, authenticated, endpoint_filter, auth, requests_auth, raise_exc, allow_reauth, log, endpoint_override, connect_retries, logger, allow, client_name, client_version, microversion, microversion_service_type, status_code_retries, retriable_status_codes, rate_semaphore, global_request_id, connect_retry_delay, status_code_retry_delay, **kwargs)\u001b[0m\n\u001b[1;32m    982\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m raise_exc \u001b[38;5;129;01mand\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m400\u001b[39m:\n\u001b[1;32m    983\u001b[0m     logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRequest returned failure status: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m    984\u001b[0m                  resp\u001b[38;5;241m.\u001b[39mstatus_code)\n\u001b[0;32m--> 985\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exceptions\u001b[38;5;241m.\u001b[39mfrom_response(resp, method, url)\n\u001b[1;32m    987\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_collect_timing:\n\u001b[1;32m    988\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m h \u001b[38;5;129;01min\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mhistory:\n",
-      "\u001b[0;31mBadRequest\u001b[0m: Invalid input for field 'identity/token/id': None is not of type 'string'\n\nFailed validating 'type' in schema['properties']['identity']['properties']['token']['properties']['id']:\n    {'type': 'string'}\n\nOn instance['identity']['token']['id']:\n    None (HTTP 400) (Request-ID: req-d0328c3b-3ce9-427b-9f0b-8770704be502)"
+      "\u001b[0;31mBadRequest\u001b[0m: Invalid input for field 'identity/token/id': None is not of type 'string'\n\nFailed validating 'type' in schema['properties']['identity']['properties']['token']['properties']['id']:\n    {'type': 'string'}\n\nOn instance['identity']['token']['id']:\n    None (HTTP 400) (Request-ID: req-a3969944-ebf5-451b-b5a2-5e9d80c43b25)"
      ]
     }
    ],
@@ -69,14 +69,14 @@
     "SITE = 'CHI@NU'\n",
     "CHARGE_CODE = 'CHI-220969'\n",
     "PROJECT_ID = uuid.uuid4()\n",
-    "RESERVATION_DAY_LENGTH = 1\n",
     "LEASE_NAME = 'bug-repro-HADOOP-16435'\n",
     "\n",
     "chi.use_site(SITE)\n",
     "chi.set('project_name', CHARGE_CODE)\n",
+    "chi.set(\"project_domain_name\", \"chameleon\")\n",
     "\n",
     "node_type = \"compute_skylake\"\n",
-    "start_date, end_date = lease_duration(days=RESERVATION_DAY_LENGTH)\n",
+    "start_date, end_date = lease_duration(hours=6)\n",
     "\n",
     "# Build list of reservations (in this case there is only one reservation)\n",
     "reservations = []\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,17 +149,18 @@
     "    return file_list\n",
     "\n",
     "bin_files = list_files('./bin/')\n",
+    "patch_files = list_files('./patch/')\n",
+    "new_files = list_files('./new_files/')\n",
     "\n",
     "with ssh.Remote(ip) as conn:\n",
     "    # Upload setup files \n",
     "    conn.run(f'mkdir {LEASE_NAME}')\n",
     "    conn.run(f'cd {LEASE_NAME}')\n",
-    "    for file in bin_files:\n",
+    "    for file in bin_files + patch_files + new_files:\n",
     "        conn.put(file)\n",
     "    \n",
     "    # Execute setup\n",
-    "    conn.run(\"prepare.sh\")\n",
-    "\n"
+    "    conn.run(\"bash prepare.sh\")\n"
    ]
   },
   {
@@ -167,6 +168,17 @@
    "metadata": {},
    "source": [
     "## Perform experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with ssh.Remote(ip) as conn:\n",
+    "    # Run tests\n",
+    "    conn.run(\"bash run_tests.sh\")"
    ]
   },
   {
@@ -182,7 +194,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filler"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "BUGGY_REPO = 'buggy_repo'\n",
+    "PATCHED_REPO = 'patched_repo'\n",
+    "\n",
+    "# Read the CSV files\n",
+    "file1 = f'./{BUGGY_REPO}/heap_usage.csv'\n",
+    "file2 = f'./{PATCHED_REPO}/heap_usage.csv'\n",
+    "df1 = pd.read_csv(file1)\n",
+    "df2 = pd.read_csv(file2)\n",
+    "\n",
+    "# Convert bytes to megabytes\n",
+    "df1.iloc[:, 1] = df1.iloc[:, 1] / 1024 / 1024\n",
+    "df2.iloc[:, 1] = df2.iloc[:, 1] / 1024 / 1024\n",
+    "\n",
+    "# Plot the graph\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(df1.iloc[:, 0], df1.iloc[:, 1], label='Before Patch')\n",
+    "plt.plot(df2.iloc[:, 0], df2.iloc[:, 1], label='After Patch')\n",
+    "plt.xlabel('Number of Sessions')\n",
+    "plt.ylabel('Heap Space (MB)')\n",
+    "plt.title('Number of Sessions vs Heap Space')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Save the plot to a file\n",
+    "plt.savefig('output_plot.png')\n",
+    "plt.show()"
    ]
   }
  ],
