--- a/hadoop-16435-demo/launch-hadoop-16435.ipynb
+++ b/hadoop-16435-demo/launch-hadoop-16435.ipynb
@@ -62,37 +62,42 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import time\n",
     "import chi\n",
-    "import uuid\n",
-    "from chi.lease import lease_duration, add_node_reservation, create_lease, add_fip_reservation\n",
+    "from chi.lease import lease_duration, add_node_reservation, create_lease, add_fip_reservation, wait_for_active\n",
     "\n",
-    "SITE = 'CHI@NU'\n",
-    "CHARGE_CODE = 'CHI-220969'\n",
-    "PROJECT_ID = uuid.uuid4()\n",
-    "LEASE_NAME = 'bug-repro-HADOOP-16435'\n",
+    "reservation_req_time = int(time.time())\n",
+    "SITE = 'CHI@UC'\n",
+    "CHARGE_CODE = 'CHI-220969' # Change to your project (CHI-XXXXXX)\n",
+    "LEASE_NAME = f'{os.getenv('USER')}-HADOOP-16435-bug-repro-{reservation_req_time}'\n",
+    "NODE_TYPE = \"compute_cascadelake_r\"\n",
     "\n",
     "chi.use_site(SITE)\n",
     "chi.set('project_name', CHARGE_CODE)\n",
     "chi.set(\"project_domain_name\", \"chameleon\")\n",
     "\n",
-    "node_type = \"compute_skylake\"\n",
     "start_date, end_date = lease_duration(hours=6)\n",
     "\n",
     "# Build list of reservations (in this case there is only one reservation)\n",
     "reservations = []\n",
-    "add_node_reservation(reservations, count=1, node_type=node_type)\n",
+    "add_node_reservation(reservations, count=1, node_type=NODE_TYPE)\n",
     "add_fip_reservation(reservations, count=1)\n",
     "\n",
     "# Create the lease\n",
     "lease = create_lease(LEASE_NAME, reservations, start_date=start_date,\n",
-    "                     end_date=end_date)\n"
+    "                     end_date=end_date)\n",
+    "lease_id = lease[\"id\"]\n",
+    "wait_for_active(lease_id)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Launch bare metal"
+    "## Launch bare metal\n",
+    "\n",
+    "This will take up to 10 minutes."
    ]
   },
   {
@@ -101,17 +106,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chi.lease import get_node_reservation\n",
-    "from chi.server import create_server, associate_floating_ip, wait_for_tcp\n",
+    "from chi.lease import get_node_reservation, get_reserved_floating_ips\n",
+    "from chi.server import create_server, associate_floating_ip, wait_for_tcp, wait_for_active\n",
     "\n",
     "SERVER_NAME = LEASE_NAME\n",
-    "reservation_id = get_node_reservation(LEASE_NAME)\n",
+    "reservation_id = get_node_reservation(lease_id)\n",
     "server = create_server(SERVER_NAME, \n",
     "                       image_name=\"CC-Ubuntu22.04\",\n",
     "                       reservation_id=reservation_id)\n",
-    "\n",
     "server_id = server.id\n",
-    "ip = associate_floating_ip(server_id)\n",
+    "\n",
+    "print(\"Waiting for server to start ...\")\n",
+    "wait_for_active(server_id)\n",
+    "print(\"Done\")\n",
+    "\n",
+    "floating_ip = get_reserved_floating_ips(lease_id)[0]\n",
+    "ip = associate_floating_ip(server_id, floating_ip_address=floating_ip)\n",
     "\n",
     "# Wait for SSH connectivity over port 22\n",
     "wait_for_tcp(ip, port=22)"
@@ -121,7 +131,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upload and execute setup script "
+    "## Upload and execute setup script \n",
+    "\n",
+    "Included in installs is a Protobuf download and build from an old source. This may take several minutes as well."
    ]
   },
   {
@@ -138,7 +150,6 @@
     }
    ],
    "source": [
-    "import os\n",
     "from chi import ssh\n",
     "\n",
     "def list_files(dir):\n",
@@ -154,13 +165,11 @@
     "\n",
     "with ssh.Remote(ip) as conn:\n",
     "    # Upload setup files \n",
-    "    conn.run(f'mkdir {LEASE_NAME}')\n",
-    "    conn.run(f'cd {LEASE_NAME}')\n",
     "    for file in bin_files + patch_files + new_files:\n",
     "        conn.put(file)\n",
     "    \n",
     "    # Execute setup\n",
-    "    conn.run(\"bash prepare.sh\")\n"
+    "    conn.run(\"bash setup.sh\")\n"
    ]
   },
   {
