--- a/hadoop-16435-demo/launch-hadoop-16435.ipynb
+++ b/hadoop-16435-demo/launch-hadoop-16435.ipynb
@@ -63,6 +63,7 @@
    ],
    "source": [
     "import os\n",
+    "import datetime\n",
     "import time\n",
     "import chi\n",
     "from chi.lease import lease_duration, add_node_reservation, create_lease, add_fip_reservation, wait_for_active\n",
@@ -70,7 +71,7 @@
     "reservation_req_time = int(time.time())\n",
     "SITE = 'CHI@UC'\n",
     "CHARGE_CODE = 'CHI-220969' # Change to your project (CHI-XXXXXX)\n",
-    "LEASE_NAME = f'{os.getenv('USER')}-HADOOP-16435-bug-repro-{reservation_req_time}'\n",
+    "LEASE_NAME = f'{os.getenv(\"USER\")}-HADOOP-16435-bug-repro-{reservation_req_time}'\n",
     "NODE_TYPE = \"compute_cascadelake_r\"\n",
     "\n",
     "chi.use_site(SITE)\n",
@@ -116,15 +117,17 @@
     "                       reservation_id=reservation_id)\n",
     "server_id = server.id\n",
     "\n",
-    "print(\"Waiting for server to start ...\")\n",
+    "print(f\"Waiting for server to start ... ({datetime.now()})\")\n",
     "wait_for_active(server_id)\n",
-    "print(\"Done\")\n",
+    "print(\"Server online.\")\n",
     "\n",
     "floating_ip = get_reserved_floating_ips(lease_id)[0]\n",
     "ip = associate_floating_ip(server_id, floating_ip_address=floating_ip)\n",
     "\n",
     "# Wait for SSH connectivity over port 22\n",
-    "wait_for_tcp(ip, port=22)"
+    "print(f\"Waiting for SSH service to start ... ({datetime.now()})\")\n",
+    "wait_for_tcp(ip, port=22)\n",
+    "print(\"SSH online.\")"
    ]
   },
   {
@@ -212,8 +215,14 @@
     "# Read the CSV files\n",
     "file1 = f'./{BUGGY_REPO}/heap_usage.csv'\n",
     "file2 = f'./{PATCHED_REPO}/heap_usage.csv'\n",
-    "df1 = pd.read_csv(file1)\n",
-    "df2 = pd.read_csv(file2)\n",
+    "\n",
+    "# Copy remote files to this notebook env\n",
+    "with ssh.Remote(ip) as conn:\n",
+    "    conn.get(remote=file1, local=BUGGY_REPO)\n",
+    "    conn.get(remote=file2, local=PATCHED_REPO)\n",
+    "\n",
+    "df1 = pd.read_csv(BUGGY_REPO)\n",
+    "df2 = pd.read_csv(PATCHED_REPO)\n",
     "\n",
     "# Convert bytes to megabytes\n",
     "df1.iloc[:, 1] = df1.iloc[:, 1] / 1024 / 1024\n",
