--- a/hadoop-16435-demo/launch-hadoop-16435.ipynb
+++ b/hadoop-16435-demo/launch-hadoop-16435.ipynb
@@ -63,7 +63,7 @@
    ],
    "source": [
     "import os\n",
-    "import datetime\n",
+    "from datetime import datetime\n",
     "import time\n",
     "import chi\n",
     "from chi.lease import lease_duration, add_node_reservation, create_lease, add_fip_reservation, wait_for_active\n",
@@ -89,7 +89,9 @@
     "lease = create_lease(LEASE_NAME, reservations, start_date=start_date,\n",
     "                     end_date=end_date)\n",
     "lease_id = lease[\"id\"]\n",
-    "wait_for_active(lease_id)\n"
+    "print(f\"Waiting for lease to be made ... ({datetime.now()})\")\n",
+    "wait_for_active(lease_id)\n",
+    "print(f\"Lease found.\")\n"
    ]
   },
   {
@@ -136,7 +138,16 @@
    "source": [
     "## Upload and execute setup script \n",
     "\n",
-    "Included in installs is a Protobuf download and build from an old source. This may take several minutes as well."
+    "Included in installs is a Protobuf download and build from an old source and Hadoop project Maven installs. This may take up to half an hour. Output is supressed to prevent `ipynb` file size issues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Waiting for setup to finish ... ({datetime.now()})\")"
    ]
   },
   {
@@ -153,6 +164,7 @@
     }
    ],
    "source": [
+    "%%capture\n",
     "from chi import ssh\n",
     "\n",
     "def list_files(dir):\n",
@@ -172,7 +184,16 @@
     "        conn.put(file)\n",
     "    \n",
     "    # Execute setup\n",
-    "    conn.run(\"bash setup.sh\")\n"
+    "    conn.run(\"bash setup.sh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Setup finished.\")"
    ]
   },
   {
